# ai_bundle

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  HOWTO_From_Zero_to_Package.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yml
ai_bundle/: __init__.py  app.py  main.py
changelog.d/: 20220916_171316_toufik.al.khawli.md  20220917_170116_toufik.al.khawli.md
tests/: test_ai_bundle.py  test_app.py  test_main.py
