[tool.poetry]
name = "ai-bundle"
version = "0.1.0"
description = ""
authors = ["Toufik Al Khawli <toufik.al.khawli@pwc.com>"]
readme = "README.md"
packages = [{include = "ai_bundle"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
